# rust-dynamic-dns-aws-route53

./: .gitignore  Cargo.toml  README.md  docker-compose.yml
src/: main.rs
volume/cache/: machine.json
